pathd: Support srv6 te policy
Signed-off-by: guozhongfeng.gzf <guozhongfeng.gzf@alibaba-inc.com>

--- a/docker/ubuntu-ci/Dockerfile
+++ b/docker/ubuntu-ci/Dockerfile
@@ -55,6 +55,7 @@ RUN apt update && apt upgrade -y && \
     apt-get install -y \
         curl \
         gdb \
+        vim \
         kmod \
         iproute2 \
         iputils-ping \
